--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "gatsby-tutorial-starter",
-  "author": "Justin Formentin",
-  "title": "Gatsby V2 Tutorial Starter",
+  "name": "Ray-Ngan",
+  "author": "Ray Ngan",
+  "title": "Ray Ngan",
   "description": "My Blog",
-  "homepage": "https://gatsby-tutorial-starter.netlify.com",
+  "homepage": "https://rayngan.gtsb.io/",
   "license": "MIT",
   "version": "0.0.7",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/justinformentin/gatsby-v2-tutorial-starter"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -74,10 +72,6 @@
     "prettier": "^1.19.1"
   },
   "keywords": [
-    "justin formentin",
-    "personal blog",
-    "tutorial",
-    "gatsby",
-    "emotion"
+   "rayngan"
   ]
 }
