--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
     "lint": "eslint src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "start": "npm run develop"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
